crates/java-syntax/tests/snapshots/lexer_snapshots__lex_whitespace_only.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
 	
  
TOKENS:
WHITESPACE " \t\n\r  "

LEX_ERRORS:
<none>
